--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </p>
             </div><!--inicio-text-->
             <div class="container-img">
-                <img src="/pc simbol.png" alt="">
+                <img src="pc simbol.png" alt="">
             </div>
         </div><!--container-->
     </section>
